# twiz

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: groupedTwitterAdTargetCriteriasUsedForYOU.md  top10EmojisFoundInTweetsLikedByYOU.md  top10TaggedTwitterUsersFoundInTweetsLikedByYOU.md  top10TwitterHashTagsFoundInTweetsLikedByYOU.md  top20AdTargetCriteriasUsedForYOUOnTwitter.md  top20HashTagsInPromotedTweetsForYOU.md  top20HashTagsInTweetsByYOU.md  top20TaggedUsersInPromotedTweetsForYOU.md  top20UserMentionsInTweetsByYOU.md  top3HashTagsInPromotedTweetsFromTop10AdvertisersForYOU.md  twitterAdCountByDisplayLocationForYOU.md  twitterAdTargetingCriteriasUsedForYOUByTopAdvertisers.md  twitterAdsCountGroupedByAdvertiserNamesAndEngagementTypesForYOU.md  twitterAdsCountGroupedByAdvertiserNamesForYOU.md  twitterAdsCountGroupedByEngagementTypesForYOU.md  twitterAdsGroupedByDeviceTypeAndDisplayLocationForYOU.md  twitterAdsTargetingYOUOnDevices.md  twitterFollowersAndFollowingsForYOU.md  twitterFollowersAndFollowingsPerCent.md  twitterFollowersFollowingsAndIntersectionForYOU.md  wordCloudOfHashTagsInTweetsByYOU.md  wordCloudOfMentionedUsersInTweetsByYOU.md
twiz/: __init__.py  extract.js  extract.py  main.py  package-lock.json  package.json  parser.py
twiz/model/: account.py  follower.py  following.py  like.py  manip.py
twiz/model/ad/engagement/: advertiser.py  attributes.py  criteria.py  criterias.py  device.py  engagement.py  engagements.py  tweet.py
twiz/model/tweet/: mention.py  tweet.py  tweets.py  url.py
twiz/plot/: util.py
twiz/plot/tweet/: viz.py
(+1 files in other folders)
